# RogueSpace

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yml
cmake/: FindGLFW3.cmake  FindGLM.cmake
include/: quicklist.h  quicklist.hpp  utils.hpp
include/engine/: actor.h  actor_impl.tpp  actorbase.h  actorbase_impl.tpp  assetmanager.hpp  assetstream.h  assetstream.hpp  component.h  engine.hpp  hierarchycontainer.h  physicsactor.h  scene.h  scene.hpp  scene_impl.tpp  script.hpp  super.h  super.hpp  time.h  time.hpp
include/engine/actor/: actor.h  actor.hpp  actor_impl.tpp  actorbase.h  actorbase.hpp  actorbase_impl.tpp  dynamicactor.h  dynamicactor.hpp  instancedmodelactor.hpp  modelactor.hpp  physicsactor.h  physicsactor.hpp  playeractor.h  playeractor.hpp
include/game/canvas/: hudcanvas.hpp  testcanvas.hpp
include/game/scene/: gamescene.hpp
include/glad/: glad.h
include/graphics/: camera.h  camera.hpp  ebo.h  ebo.hpp  material.h  material.hpp  mesh.h  mesh.hpp  model.h  model.hpp  screen.h  shader.h  shader.hpp  texture.h  texture.hpp  vao.h  vao.hpp  vbo.h  vbo.hpp  window.h  window.hpp
include/jage/: engine.hpp  tags.hpp
include/jage/actor/: actor.hpp  actor_impl.tpp  camera.hpp  dynamicactor.hpp  modelactor.hpp  physicsactor.hpp  playeractor.hpp  scene.hpp  scene_impl.tpp  shipactor.hpp  staticactor.hpp  staticactor_impl.tpp
include/jage/event/: collisionevent.hpp  damageevent.hpp  fireevent.hpp  healevent.hpp  killevent.hpp  scoreupdateevent.hpp  timerevent.hpp
include/jage/graphics/: material.hpp  shader.hpp  texture.hpp
include/jage/node/: canvas.hpp  canvas_impl.tpp  scene.hpp  scene_impl.tpp
include/jage/runtime/: assetmanager.hpp  assetstream.hpp  time.hpp  window.hpp
include/jage/script/: aicontrollerscript.hpp  camerashakescript.hpp  colliderscript.hpp  collisionreceiverscript.hpp  healthscript.hpp  playercontrollerscript.hpp  weaponscript.hpp
include/jage/system/: super.hpp
include/jage/type/: rect.hpp  rect_impl.tpp
include/jage/types/: rect.hpp  rect_impl.tpp
include/jage/utility/: utility.hpp
lib/: CMakeLists.txt  glfw3.lib
lib/KHR/: CMakeLists.txt
lib/glad/: CMakeLists.txt  glad.c
lib/json/: CMakeLists.txt
lib/json/json/: json.h
lib/stb/: CMakeLists.txt
res/: SpriteSpheres.tga  default.frag  default.vert  light.vert  shader.frag  ui.frag  ui.vert
res/bullet/: BulletTemp.gltf
res/map/: scene.gltf
res/shader/: default.frag  default.vert  light.frag  ui.frag  ui.vert
res/sphere/: sphere.gltf
res/sprite/: Flash.sprite  Flash.tga
res/sprite/hud/: BarEmpty.sprite  BarFull.sprite  Digit0.sprite  (+20 more)
res/starship/: Normal.LOD1.tga  Normal.LOD2.tga  Starship01.gltf
res/suzanne/: suzanne.gltf
src/: CMakeLists.txt  main.cpp  utils.cpp
src/engine/: actor.cpp  actorbase.cpp  assetmanager.cpp  assetstream.cpp  engine.cpp  hierarchycontainer.cpp  physicsactor.cpp  scene.cpp  script.cpp  super.cpp  time.cpp
src/engine/actor/: actor.cpp  actorbase.cpp  dynamicactor.cpp  instancedmodelactor.cpp  modelactor.cpp  physicsactor.cpp  playeractor.cpp
src/game/: CMakeLists.txt
src/game/canvas/: hudcanvas.cpp  testcanvas.cpp
src/game/scene/: gamescene.cpp
src/glad/: glad.c
src/graphics/: camera.cpp  ebo.cpp  material.cpp  mesh.cpp  model.cpp  screen.cpp  shader.cpp  texture.cpp  vao.cpp  vbo.cpp  window.cpp
src/jage/: CMakeLists.txt  engine.cpp
src/jage/actor/: actor.cpp  camera.cpp  dynamicactor.cpp  modelactor.cpp  physicsactor.cpp  playeractor.cpp  scene.cpp  shipactor.cpp  staticactor.cpp
src/jage/actor/abc/: actor_abc.cpp
src/jage/event/: collisionevent.cpp  damageevent.cpp  timerevent.cpp
src/jage/event/abc/: event_abc.cpp  eventabc.cpp
src/jage/graphics/: material.cpp  shader.cpp  texture.cpp
src/jage/graphics/abc/: ebo.cpp  oglbuffer_abc.cpp
src/jage/graphics/mesh2d/: mesh2d.cpp  quad2d.cpp  sprite.cpp
src/jage/graphics/mesh3d/: ebo3d.cpp  material.cpp  mesh3d.cpp  model3d.cpp  vao3d.cpp  vbo3d.cpp
src/jage/graphics/model/: ebo.cpp  mesh.cpp  model.cpp  vao.cpp  vbo.cpp
src/jage/node/: canvas.cpp  scene.cpp
src/jage/node/abc/: node_abc.cpp  transformable2d_abc.cpp  transformable3d_abc.cpp
src/jage/node/actor/: camera.cpp  dynamicactor.cpp  modelactor.cpp  physicsactor.cpp  shipactor.cpp  staticactor.cpp
src/jage/node/actor/abc/: actor_abc.cpp
src/jage/node/base/: dying_base.cpp  transformable2d.cpp  transformable3d.cpp
src/jage/node/frame/: anchor.cpp  anchors.cpp  basicframe.cpp  enemyindicatorframe.cpp  progressbarframe.cpp  scoreframe.cpp  solidframe.cpp  spriteframe.cpp  squareframe.cpp
src/jage/node/frame/abc/: frame_abc.cpp
src/jage/runtime/: assetmanager.cpp  assetstream.cpp  time.cpp  window.cpp
src/jage/runtime/asset/: assetmanager.cpp  assetstream.cpp
src/jage/script/: aicontrollerscript.cpp  camerashakescript.cpp  colliderscript.cpp  collisionreceiverscript.cpp  healthscript.cpp  playercontrollerscript.cpp  weaponscript.cpp
src/jage/script/abc/: script_abc.cpp  scriptable.cpp
src/jage/script/actor/: aicontrollerscript.cpp  bulletscript.cpp  camerashakescript.cpp  colliderscript.cpp  collidisionnotifierscript.cpp  collisionlistenerscript.cpp  collisionreceiverscript.cpp  enemyspawnerscript.cpp  healthregenerationscript.cpp  healthscript.cpp  playercontrollerscript.cpp  scorescript.cpp  weaponscript.cpp
src/jage/script/frame/: cursordistanceopacityscript.cpp  followcursorscript.cpp  notificationkillscript.cpp  opacitycombatflickerscript.cpp  opacitydamageflashscript.cpp  opacityflashscript.cpp  opacityflickerscript.cpp  opacitylowhpperiodicflashscript.cpp  opacityscoreflashscript.cpp  progressdamagescript.cpp  scoreupdatescript.cpp  weaponcursorscript.cpp
src/jage/system/: super.cpp
src/jage/utility/: utility.cpp
test/: CMakeLists.txt  quicklist_test.cpp  utils_test.cpp
test/engine/: assetstream_test.cpp  scene_test.cpp  time_test.cpp
test/googletest/: CMakeLists.txt
test/graphics/: shader_test.cpp
test/testres/: compilable1.vert  filecontents1.txt  uncompilable1.frag  uncompilable1.vert
(+141 files in other folders)
